# TestTask

./: .gitignore  CMakeLists.txt  README.md  testAllForOne.txt  testQueue.txt
src/: ComputerClub.cpp  ComputerClub.h  InputProcessing.cpp  InputProcessing.h  Table.cpp  Table.h  TimeClub.cpp  TimeClub.h  main.cpp
test/: unitTest.cpp
